--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet"
-        href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
   <style>
-
     img {
       max-width: 70%;
     }
@@ -15,88 +14,92 @@
       display: block;
       margin: 10px auto;
     }
-
   </style>
 </head>
 
 <body>
-<div class="container">
-  <h1 id="title" class="text-center">Welcome to my website.</h1>
-  <div class="row">
-    <article class="col-sm-8">
-      <p>My website is very important because I have many important things
-        to say. Here is a picture of a puppy in a cup: </p>
-      <img src="pup-in-cup.jpg" alt="Puppy in Cup">
-      <p>Here are some more thoughts: Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Cum harum labore veritatis, possimus
-        facilis quas repellat, explicabo, ad commodi ipsum quidem nostrum
-        earum pariatur fugit! Magni sunt nulla impedit! Facilis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, natus
-        qui nostrum libero atque hic distinctio sint facilis nihil possimus
-        tenetur deserunt rerum laboriosam cum quisuam doloremque ducimus
-        error.</p>
-      <p>Rerum debitis aspernatur, ipsum animi! Quis ullam dolore blanditiis
-        accusantium eius minus tempore, iure maxime similique vel! Possimus
-        reprehenderit autem, recusandae quos laudantium nesciunt libero suscipit
-        officia rerum, et.</p>
-      <p>Aliquam harum at soluta id esse perspiciatis, nesciunt corporis nostrum
-        commodi, dolorum, repellat possimus a cumque. Id sed explicabo, quaerat
-        sit esse facere, voluptatem, odit nesciunt eveniet assumenda, error!</p>
-      <p>Consequuntur porro, nobis placeat, labore magni aliquam repellendus
-        consequatur hic facere, molestiae dolorum suscipit quos sint, minima
-        Quibusdam voluptatem est hic, corporis. Officiis delectus, consectetur
-        harum reiciendis perferendis.</p>
-    </article>
-    <aside class="col-sm-4">
-      <h4>I love lists. Here's why.</h4>
-      <ol>
-        <li>Sometimes they're numbered, and numbers are great.</li>
-        <li>Sometimes they're not, and that's okay too.</li>
-        <li>I don't have the attention span to read paragraphs.</li>
-        <li>Hey look, there's a puppy!</li>
-      </ol>
-    </aside>
+  <div class="container">
+    <h1 id="title" class="text-center">Welcome to my website.</h1>
+    <div class="row">
+      <article class="col-sm-8">
+        <p>My website is very important because I have many important things
+          to say. Here is a picture of a puppy in a cup: </p>
+        <img src="pup-in-cup.jpg" alt="Puppy in Cup">
+        <p>Here are some more thoughts: Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Cum harum labore veritatis, possimus
+          facilis quas repellat, explicabo, ad commodi ipsum quidem nostrum
+          earum pariatur fugit! Magni sunt nulla impedit! Facilis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, natus
+          qui nostrum libero atque hic distinctio sint facilis nihil possimus
+          tenetur deserunt rerum laboriosam cum quisuam doloremque ducimus
+          error.</p>
+        <p>Rerum debitis aspernatur, ipsum animi! Quis ullam dolore blanditiis
+          accusantium eius minus tempore, iure maxime similique vel! Possimus
+          reprehenderit autem, recusandae quos laudantium nesciunt libero suscipit
+          officia rerum, et.</p>
+        <p>Aliquam harum at soluta id esse perspiciatis, nesciunt corporis nostrum
+          commodi, dolorum, repellat possimus a cumque. Id sed explicabo, quaerat
+          sit esse facere, voluptatem, odit nesciunt eveniet assumenda, error!</p>
+        <p>Consequuntur porro, nobis placeat, labore magni aliquam repellendus
+          consequatur hic facere, molestiae dolorum suscipit quos sint, minima
+          Quibusdam voluptatem est hic, corporis. Officiis delectus, consectetur
+          harum reiciendis perferendis.</p>
+      </article>
+      <aside class="col-sm-4">
+        <h4>I love lists. Here's why.</h4>
+        <ol>
+          <li>Sometimes they're numbered, and numbers are great.</li>
+          <li>Sometimes they're not, and that's okay too.</li>
+          <li>I don't have the attention span to read paragraphs.</li>
+          <li>Hey look, there's a puppy!</li>
+        </ol>
+      </aside>
+    </div>
+    <div class="row mb-5">
+      <div class="col-sm-4">
+        Red
+        <input class="form-control" type="number" min="0" max="255" value="255">
+      </div>
+      <div class="col-sm-4">
+        Blue
+        <input class="form-control" type="number" min="0" max="255" value="255">
+      </div>
+      <div class="col-sm-4">
+        Green
+        <input class="form-control" type="number" min="0" max="255" value="255">
+      </div>
+    </div>
   </div>
-  <div class="row mb-5">
-    <div class="col-sm-4">
-      Red
-      <input class="form-control" type="number" min="0" max="255" value="255">
-    </div>
-    <div class="col-sm-4">
-      Blue
-      <input class="form-control" type="number" min="0" max="255" value="255">
-    </div>
-    <div class="col-sm-4">
-      Green
-      <input class="form-control" type="number" min="0" max="255" value="255">
-    </div>
-  </div>
-</div>
-<script src="https://unpkg.com/jquery"></script>
-<script>
-  // Add your code here!
+  <script src="https://unpkg.com/jquery"></script>
+  <script>
+    // Add your code here!
 
-$("article img").addClass("image-center");
+    $("article img").addClass("image-center");
 
-const $paragraph = $("p");
-$paragraph[$paragraph.length-1] .remove();
+    const $paragraph = $("p");
+    $paragraph[$paragraph.length - 1].remove();
 
-// const $title = $("h1");
+    function getRandomNumber() {
+      return Math.floor(Math.random() * (100 + 1));
+    }
 
-function getRandomNumber(){
-  return Math.floor(Math.random() * (100+1))
-}
+    $("h1").css("font-size", getRandomNumber());
 
-$("h1").css("font-size", getRandomNumber());
+    $("ol").append($("<li>").text("Hey something random"));
 
-// const $list = $("ol");
-// const $newLi = $("<li>").text("Hello World");
-// $list.append($newLi);
-$("ol").append($("<li>").text("Hey something random"));
+    $('aside').empty()
+      .append($('<p>').text("Sorry for that list's existence!"));
 
+    $('.form-control').on('change', setBodyColor);
 
+    function setBodyColor(){
+      const $formInputs = $('.form-control');
+      // return `rgb(${$formInputs[0].value}, ${$formInputs[1].value}, ${$formInputs[2].value})`;
+      const backgroundColorCSS = `background-color: rgb(${$formInputs[0].value}, ${$formInputs[1].value}, ${$formInputs[2].value})`;
+      $('body').css(backgroundColorCSS);
+    }
 
-</script>
+  </script>
 </body>
 
 </html>
